# bitwars

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.cursor/rules/: uuid-serialization.mdc
.github/workflows/: schema-check.yml
apps/web/: .env.example  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts  windsurf_prompt_gamestate_stream.md
apps/web/.next/: prerender-manifest.json  trace
apps/web/.next/cache/: .rscinfo
apps/web/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/types/: routes.d.ts  validator.ts
apps/web/test/: decode_protobuf.test.ts  proceduralBackground.test.ts  read_redis.ts  redis-streams.test.ts  write_and_read_ioredis.ts  write_and_read_redis.ts
docs/: README.md  glossary.md  milestones.md
docs/adr/: 001-scripting-engine-and-sandbox.md  002-content-versioning-and-evolution.md  002-intents-typing-and-actionstate.md  003-serialization-strategy-hot-vs-reconnect.md  README.md
docs/milestones/: m0-hello-rts.md  m0.1-6-mini-replay-script.md  m0.1-intent-lifecycle.md  m4-datadriven-entities.md  m5-abilities.md  m6-player-ownership-spawn-control-gating-approach.md  m6-spawning.md  m7-resource-ledger.md  m8-resource-collection.md  m8b-intent-ui.md  m8c-id-reconciliation.md
docs/milestones/m0/: m0.1-6-mini-replay-script.md
docs/milestones/m5/: m5-camera-worldspace-mapux.md  m5.1-client-camera-validation.md  m5.2-procedural-background-outline.md  m5.2-procedural-background-validation.md  procedurally-generated-background.md
docs/requirements/: entities-and-abilities.md  entity-intents.md
docs/tools/: chaos-harness.md  intent-cli.md  latency-probe.md  redis-to-files.md  schema-check.md
scripts/: clean.sh  schema-check.sh
services/rts-engine/: Cargo.toml  build.rs  package.json
services/rts-engine/config/: spawn.example.yaml
services/rts-engine/crates/sim/: Cargo.toml
services/rts-engine/crates/sim/src/: codec.rs  intent.rs  lib.rs  state.rs  systems.rs
services/rts-engine/crates/sim/src/pb/: mod.rs
services/rts-engine/crates/sim/tests/: chaos.rs  determinism.rs  movement.rs
services/rts-engine/examples/: generate_examples.rs  proto_sanity.rs  read_deltas.rs  read_snapshot.rs
services/rts-engine/rts-engine/: Cargo.toml
services/rts-engine/src/: bigmain.rs  config.rs  content.rs  delta.rs  lib.rs  main.rs  physics.rs  spawn_config.rs
services/rts-engine/src/engine/: intent.rs  mod.rs  state.rs
services/rts-engine/src/io/: env.rs  mod.rs  redis.rs  telemetry.rs  tracing.rs
services/rts-engine/src/pb/: bitwars.rs
src/app/: layout.tsx  page.tsx
src/app/gamestate/: connection.ts
src/app/play/: layout.tsx  page.tsx
src/features/gamestate/: world.ts
src/features/pixijs/: world.ts
src/gamestate/queries/: delete.ts  upsert.ts
src/lib/: constants.ts  utils.ts
(+290 files in other folders)
