[package]
name = "rts-engine"
version = "0.1.0"
edition = "2021"
default-run = "rts-engine"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
dotenvy = "0.15"

prost = "0.13"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"