[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1", features = ["v7"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# We'll use the protobuf types directly